<resources>
    <string name="app_name">BPCL Track</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_button_text">START</string>
    <string name="stop_button_text">FINISH</string>
    <string name="report">REPORT</string>
    <string name="email_edit_text_hint">Enter email</string>
    <string name="password_edit_text_hint">Enter password</string>
    <string name="sign_in_button_hint">SIGN IN</string>
    <string name="report_incident">Report Incident</string>
    <string name="priority_static">Priority</string>
    <string name="report_type_static">Report Type</string>
    <string name="description_static">Enter Description…</string>
    <string name="enter_description_of_incident">Enter Description of Incident…</string>
    <string name="attach_picture">Attach Picture</string>
    <string name="getting_location">Getting Location…</string>
    <string name="title_activity_officer">Officer</string>
    <string name="acknowledge">ACKNOWLEDGE</string>
    <string name="enter_chainage_link">Enter Chainage link…</string>
    <string name="measure">MEASURE</string>
    <string name="enter_tlp_number">Enter TLP Number</string>
    <string name="take_measurement">Take Measurement</string>
    <string name="enter_tlp_type">Enter TLP Type</string>
    <string name="enter_psp_value">Enter PSP Value</string>
    <string name="enter_ac_value">Enter AC Value</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="choose_tlp_number">Choose TLP Number…</string>
    <string name="retake_picture">RETAKE PICTURE</string>
</resources>
