<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity" >

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_incident"
                android:textColor="#000"
                android:textSize="30sp"
                android:layout_marginBottom="30dp"
                android:layout_margin="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="#777" />

            <TextView
                style="@style/StaticTextViewTheme"
                android:text="@string/report_type_static" />
            <Spinner
                android:id="@+id/report_type_spinner"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/StaticTextViewTheme"
                android:text="@string/priority_static" />
            <NumberPicker
                android:id="@+id/priority_picker"
                android:layout_width="wrap_content"
                android:layout_height="70dp"/>

            <TextView
                style="@style/StaticTextViewTheme"
                android:text="@string/description_static" />
            <EditText
                android:id="@+id/report_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                android:background="@null"
                android:padding="10dp"
                android:hint="@string/enter_description_of_incident" />

            <Button
                android:id="@+id/take_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/attach_picture"
                android:textColor="#000" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/images_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="#777" />

            <Button
                android:id="@+id/submit_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_button_text"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:textColor="#000" />

            <ProgressBar
                android:layout_margin="30dp"
                android:id="@+id/submit_report_progress_bar"
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:layout_height="wrap_content" />

        </LinearLayout>
<!--    </RelativeLayout>-->

</androidx.core.widget.NestedScrollView>